--- a/common/gtk-3.0/3.20/sass/_applications.scss
+++ b/common/gtk-3.0/3.20/sass/_applications.scss
@@ -11,12 +11,6 @@ terminal-window notebook {
 //
 terminal-window {
 
-  scrollbar {
-    &.vertical slider { margin-left: 3px; }
-
-    trough { border-width: 0; }
-  }
-
   notebook {
     > header.top {
       padding-top: 3px;
